--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Automation</title>
 	<link rel="stylesheet" href="_/css/style.css">
-
 </head>
 <body>
-	<h1>Hello World!</h1> 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum doloribus ipsam, cupiditate velit, sint distinctio iure, voluptatem corrupti consequatur iusto quod quos dolorum accusamus, vero ut aperiam officia odio. Mollitia.</p>
-	<ul>
-		<li><a href="#"><i class="fa fa-home"></i>Home</li></a>
-		
-		<li>Other</li>
-		<li>Other</li>
-	</ul>
-<script src="_/js/script.js"></script>
-<script src="http://localhost:35729/livereload.js"></script>
+	<section>
+		<div id="main">
+			<div>/</div>
+		</div>
+	</section>
+	<script src="_/js/script.js"></script>
+	<script src="http://localhost:35729/livereload.js"></script>
+</body>
+</html>
 </body>
 </html>
