--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
 	<link rel="stylesheet" href="_/css/style.css">
 </head>
 <body>
-	<section>
-		<div id="main">
-			<div>/</div>
-		</div>
-	</section>
+<div class="wrapper">
+	<div class="hero">
+	    <span id="subway" role="img" aria-label="Japanese subway">
+	        <span class="inner"></span>
+	    </span>
+	     <div id="main">
+				<div>/</div>
+			</div>
+	</div>
+</div>
+
+
+
+
+
+	
 	<script src="_/js/script.js"></script>
 	<script src="http://localhost:35729/livereload.js"></script>
 </body>
