toggling between Japanese and English

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 	        <span class="inner"></span>
 	    </span>
 	     <div id="main">
-				<div>/</div>
+	     	<div>
+	     		<ul>
+	     		<li id="en">English</li>
+	     		<li id="ja">Japanese</li>
+	     	</ul>
+				<div><!--Poem Text Here--></div>
 			</div>
 	</div>
 </div>
