standardized voices despite still not fully understanding what the problem was.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Automation</title>
+	<title>自動化 | Automation</title>
 	<link rel="stylesheet" href="_/css/style.css">
 </head>
 <body>
@@ -21,12 +21,6 @@
 			</div>
 	</div>
 </div>
-
-
-
-
-
-	
 	<script src="_/js/script.js"></script>
 	<script src="http://localhost:35729/livereload.js"></script>
 </body>
