made layout responsive

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 		<article>
 			<p>Inspired by the endlessly repeated automated announcements in Tokyo train and subway stations, I wrote a generative poem called "自動化" (and an English version called "Automation").</p> 
 			<p>It consists of the familiar "１番線ドアが閉まります。ご注意ください。" ("The doors on platform 1 are closing. Please be careful.")</p> 
-			<p>with the platform number, subject, verb and exhortation randomly selected from a list I made.</p>
+			<p>To generate each line, a script randomly selects the platform number, subject, verb, and exhortation from a list I made. It displays the result on the screen and then generates the next line, going on for as long as the browser window is open. Browsers capable of speech synthesis will also read the text aloud in either English or Japanese.</p>
 			<p>Andrew Campana</p>
 		</article>
 </section>
 <section id="poem">
 	     <div class="controls">
 	     		<ul>
-	     		<li class="pointer" id="en">English</li>
-	     		<li class="pointer" id="ja">日本語</li>
-	     		<li><a href="#">People</a></li>
-	     		<li><a href="#">Code</a></li>
-	     		<li><a href="#">Help</a></li>
+	     		   	<li class="pointer" id="en">English</li>
+	     				<li class="pointer" id="ja">日本語</li>
+	     				<li class="pointer" id="people">People</li>
+	     				<li><class="pointer" id="code">Code</li>
+	     				<li><class="pointer" id="help">Help</li>
 	     	</ul>
 	     </div>
 
@@ -48,9 +48,9 @@
 	<ul>
 	     	<li class="pointer" id="en">English</li>
 	     	<li class="pointer" id="ja">日本語</li>
-	     	<li><a href="#">People</a></li>
-	     	<li><a href="#">Code</a></li>
-	     	<li><a href="#">Help</a></li>
+	     	<li class="pointer" id="people">People</li>
+	     	<li><class="pointer" id="code">Code</li>
+	     	<li><class="pointer" id="help">Help</li>
 	</ul>
 </footer>
 </div>
