testing of layout on multiple device settings; no breaking of layout

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 </section>
 <section id="expo">
 		<article>
-			<p>Inspired by the endlessly repeated automated announcements in Tokyo train and subway stations, I wrote a generative poem called "自動化" (and an English version called "Automation").</p> 
-			<p>It consists of the familiar "１番線ドアが閉まります。ご注意ください。" ("The doors on platform 1 are closing. Please be careful.")</p> 
-			<p>To generate each line, a script randomly selects the platform number, subject, verb, and exhortation from a list I made. It displays the result on the screen and then generates the next line, going on for as long as the browser window is open. Browsers capable of speech synthesis will also read the text aloud in either English or Japanese.</p>
+			<p>Inspired by the endlessly repeated automated announcements in Tokyo train and subway stations, this is a generative poem called "自動化" in its Japanese version, and "Automation" in English.</p> 
+			<p>It uses the syntax of the familiar announcement "１番線ドアが閉まります。ご注意ください。" ("The doors on platform 1 are closing. Please be careful"). Every 8 seconds, a script generates a new line by randomly selecting the platform number, subject, verb, and exhortation from a preset list. It displays the result on the screen and then generates a new line. Browsers capable of speech synthesis will also read the text aloud in either English or Japanese.</p>
 			<p>Andrew Campana</p>
 		</article>
 </section>
@@ -35,7 +34,6 @@
 	     				<li class="pointer" id="ja">日本語</li>
 	     				<li class="pointer" id="people">People</li>
 	     				<li><class="pointer" id="code">Code</li>
-	     				<li><class="pointer" id="help">Help</li>
 	     	</ul>
 	     </div>
 
@@ -50,7 +48,6 @@
 	     	<li class="pointer" id="ja">日本語</li>
 	     	<li class="pointer" id="people">People</li>
 	     	<li><class="pointer" id="code">Code</li>
-	     	<li><class="pointer" id="help">Help</li>
 	</ul>
 </footer>
 </div>
