background image for #expo

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 	     	<li><class="pointer" id="code">Code</li>
 	</ul>
 </footer>
+<section id="People">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti delectus illo fuga vero facere, velit neque reprehenderit optio animi ratione fugiat eum, officia, eos quas tempora quibusdam dolore numquam totam!</section>
+<section id="Code">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam error laborum harum non, voluptas reiciendis sunt autem eveniet ducimus magnam, id aliquid, corporis accusamus sapiente fugit sint explicabo facere, enim.</section>
 </div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="_/js/script.js"></script>
 	<script src="http://localhost:35729/livereload.js"></script>
-</body>
-</html>
 </body>
 </html>
