--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header><a href="http://pdrjournal.rog">PDR</a></header>
 <section id="intro">
 	<video autoplay="" loop="" poster="_/videos/tokyo_subway.png" id="bgvid">
-		<source src="_/videos/tokyo_subway.webm" type="video/webm">
+		<!-- <source src="_/videos/tokyo_subway.webm" type="video/webm"> -->
 		<source src="_/videos/tokyo_subway.m4v" type="video/mp4">
 	</video>
 	<div class="overlay">
