--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
 <section id="poem">
 	     <div class="controls">
 	     		<ul>
-	     		   	<li class="pointer" id="en">English</li>
-	     				<li class="pointer" id="ja">日本語</li>
-	     				<li class="pointer" id="people">People</li>
-	     				<li><class="pointer" id="code">Code</li>
+	     		   	<li>
+	     		   		<a href="#" class="no_default" id="en">English</a>
+	     		   	</li>
+	     				<li>
+	     					<a href="#" class="no_default" id="ja">日本語</a>
+	     				</li>
+	     				<li>
+	     					<a href="#" class="no_default" id="people">People</a>
+	     				</li>
+	     				<li>
+	     					<a href="#" class="no_default" id="code">Code</a>
+	     				</li>
 	     	</ul>
 	     </div>
 
@@ -44,14 +52,22 @@
 
 <footer class="controls">
 	<ul>
-	     	<li class="pointer" id="en">English</li>
-	     	<li class="pointer" id="ja">日本語</li>
-	     	<li class="pointer" id="people">People</li>
-	     	<li><class="pointer" id="code">Code</li>
-	</ul>
+	     		   	<li>
+	     		   		<a href="#" class="no_default" id="en">English</a>
+	     		   	</li>
+	     				<li>
+	     					<a href="#" class="no_default" id="ja">日本語</a>
+	     				</li>
+	     				<li>
+	     					<a href="#" class="no_default" id="people">People</a>
+	     				</li>
+	     				<li>
+	     					<a href="#" class="no_default" id="code">Code</a>
+	     				</li>
+	     	</ul>
 </footer>
-<section id="People">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti delectus illo fuga vero facere, velit neque reprehenderit optio animi ratione fugiat eum, officia, eos quas tempora quibusdam dolore numquam totam!</section>
-<section id="Code">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam error laborum harum non, voluptas reiciendis sunt autem eveniet ducimus magnam, id aliquid, corporis accusamus sapiente fugit sint explicabo facere, enim.</section>
+<section id="people">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti delectus illo fuga vero facere, velit neque reprehenderit optio animi ratione fugiat eum, officia, eos quas tempora quibusdam dolore numquam totam!</section>
+<section id="code">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam error laborum harum non, voluptas reiciendis sunt autem eveniet ducimus magnam, id aliquid, corporis accusamus sapiente fugit sint explicabo facere, enim.</section>
 </div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="_/js/script.js"></script>
