added basic .toggle effect for #people and #code

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 	     					<a href="#" class="no_default" id="ja">日本語</a>
 	     				</li>
 	     				<li>
-	     					<a href="#" class="no_default" id="people">People</a>
+	     					<a href="#" class="no_default people" class="people">People</a>
 	     				</li>
 	     				<li>
-	     					<a href="#" class="no_default" id="code">Code</a>
+	     					<a href="#" class="no_default code" class="code">Code</a>
 	     				</li>
 	     	</ul>
 	     </div>
@@ -59,15 +59,23 @@
 	     					<a href="#" class="no_default" id="ja">日本語</a>
 	     				</li>
 	     				<li>
-	     					<a href="#" class="no_default" id="people">People</a>
+	     					<a href="#" class="no_default people">People</a>
 	     				</li>
 	     				<li>
-	     					<a href="#" class="no_default" id="code">Code</a>
+	     					<a href="#" class="no_default code">Code</a>
 	     				</li>
 	     	</ul>
 </footer>
-<section id="people">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti delectus illo fuga vero facere, velit neque reprehenderit optio animi ratione fugiat eum, officia, eos quas tempora quibusdam dolore numquam totam!</section>
-<section id="code">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam error laborum harum non, voluptas reiciendis sunt autem eveniet ducimus magnam, id aliquid, corporis accusamus sapiente fugit sint explicabo facere, enim.</section>
+<section id="people">
+	<p>Text for "自動化 || Automation" was provided by <strong>Andrew Campana</strong>, who also wrote the original code for randomly generating the statements. Campana's original script is a modified version of code authored by <strong>Nick Montfort</strong> for use in his generative poem "Lede."</p>
+	<p><strong>Thomas Dodson</strong> wrote the code for speech synthesis, language switching, responisve page design, animations, and embedded video.
+	<p>The looped video of the Tokyo subway at the beginning of the piece was taken from <i>Tokyo's subway (metro/underground), Japan</i>, shot by <strong>Vic Stefano</strong> and used with permission.</p>
+</section>
+<section id="code">
+	<p>"自動化 || Automation" was built using HTML5, CSS3, and JQuery. Note that the full range of features may not be available in some browsers and on some devices. For the best experience, we recommend using the Chrome browser on a desktop or laptop.</p>
+	<p>The code for this project is open source and made freely available under the MIT License. Source code can be downloaded or cloned from the repository located at <a href="https://github.com/tdodson/subway_auto">https://github.com/tdodson/subway_auto</a>.</p>
+	
+</section>
 </div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="_/js/script.js"></script>
