added basic jquery ui mobile dialogs. unstyled.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>自動化 | Automation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="_/css/style.css">
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
 </head>
 <body>
 <header><a href="http://pdrjournal.rog">PDR</a></header>
@@ -77,8 +78,9 @@
 	
 </section>
 </div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="_/js/script.js"></script>
 	<script src="http://localhost:35729/livereload.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
+	<script src="_/js/script.js"></script>
 </body>
 </html>
