changed code text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </section>
 <section id="code">
 	<p>"自動化 || Automation" was built using HTML5, CSS3, and JQuery. Note that the full range of features may not be available in some browsers and on some devices. For the best experience, we recommend using the Chrome browser on a desktop or laptop.</p>
-	<p>The code for this project is open source and made freely available under the MIT License. Source code can be downloaded or cloned from the repository located at <a href="https://github.com/tdodson/subway_auto">https://github.com/tdodson/subway_auto</a>.</p>
+	<p>The code for this project is open source and made freely available under the MIT License. Source code can be downloaded or cloned from the repository on <a href="https://github.com/tdodson/subway_auto">Github</a>.</p>
 	
 </section>
 </div>
