styling for dialog boxes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
 </head>
 <body>
-<header><a href="http://pdrjournal.rog">PDR</a></header>
+<header><a href="http://pdrjournal.org">PDR</a></header>
 <section id="intro">
 	<video autoplay="" loop="" poster="_/videos/tokyo_subway.png" id="bgvid">
 		<!-- <source src="_/videos/tokyo_subway.webm" type="video/webm"> -->
@@ -68,13 +68,14 @@
 	     	</ul>
 </footer>
 <section id="people">
-	<p>Text for "自動化 || Automation" was provided by <strong>Andrew Campana</strong>, who also wrote the original code for randomly generating the statements. Campana's original script is a modified version of code authored by <strong>Nick Montfort</strong> for use in his generative poem "Lede."</p>
-	<p><strong>Thomas Dodson</strong> wrote the code for speech synthesis, language switching, responisve page design, animations, and embedded video.
-	<p>The looped video of the Tokyo subway at the beginning of the piece was taken from <i>Tokyo's subway (metro/underground), Japan</i>, shot by <strong>Vic Stefano</strong> and used with permission.</p>
+	<p>Text for "自動化 || Automation" was provided by <a href="http://harvard.academia.edu/AndrewCampana" target="_blank">Andrew Campana</a>, who also wrote the original code for randomly generating the statements. Campana's original script is a modified version of code authored by <a href="http://nickm.com/" target="_blank">Nick Montfort</a> for use in his generative poem "Lede."</p>
+	<p><a href="http://pdrjournal.org/staff" target="_blank">Thomas Dodson</a> wrote the code for speech synthesis, language switching, responisve page design, animations, and embedded video.</p>
+	<p>The looped video of the Tokyo subway at the beginning of the piece was taken from "Tokyo's subway (metro / underground), Japan," shot by <a href="https://www.youtube.com/user/vstefanu" target="_blank">Vic Stefano</a>.</p>
 </section>
 <section id="code">
-	<p>"自動化 || Automation" was built using HTML5, CSS3, and JQuery. Note that the full range of features may not be available in some browsers and on some devices. For the best experience, we recommend using the Chrome browser on a desktop or laptop.</p>
-	<p>The code for this project is open source and made freely available under the MIT License. Source code can be downloaded or cloned from the repository on <a href="https://github.com/tdodson/subway_auto">Github</a>.</p>
+	<p>"自動化 || Automation" was built using HTML5, CSS3, and JQuery.</p> 
+	<p>Note that the full range of features may not be available in some browsers and on some devices. For the best experience, we recommend using the Chrome browser on a desktop or laptop.</p>
+	<p>The code for this project is open source and made freely available under the MIT License. Source code can be downloaded or cloned from the repository on <a href="https://github.com/tdodson/subway_auto" target="_blank">Github</a>.</p>
 	
 </section>
 </div>
