--- a/automation.html
+++ b/automation.html
@@ -93,10 +93,10 @@
   ga('send', 'pageview');
 </script>
 <script>
-	window.jQuery || document.write('<script src="_/js/jquery1.11.1.js"></script>')
+	window.jQuery || document.write('<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>')
 </script>
 <script>
-	window.jQuery.ui || document.write('<script src="_/js/jquery-ui.min.js"></script>')
+	window.jQuery.ui || document.write('<script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>')
 </script>
 </body>
 </html>
