--- a/automation.html
+++ b/automation.html
@@ -84,10 +84,11 @@
 	<script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js" integrity="sha256-4JY5MVcEmAVSuS6q4h9mrwCm6KNx91f3awsSQgwu0qc=" crossorigin="anonymous"></script>
 	<script src="_/js/script.js"></script>
 <script>
-	window.jQuery || document.write('<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>')
+    window.jQuery || document.write('<script src="https://code.jquery.com/jquery-1.11.1.min.js"><\/script>');
 </script>
 <script>
-	window.jQuery.ui || document.write('<script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>')
+    window.jQuery.ui || document.write('<script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"><\/script>');
+</script>
 </script>
 </body>
 </html>
